; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_path.c_test_NeedCurrentDirectoryForExePathA.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_path.c_test_NeedCurrentDirectoryForExePathA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"NoDefaultCurrentDirectoryInExePath\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"returned FALSE for \22.\22\0A\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"c:\\\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"returned FALSE for \22c:\\\22\0A\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"cmd.exe\00", align 1
@.str.6 = private unnamed_addr constant [30 x i8] c"returned FALSE for \22cmd.exe\22\0A\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"nya\00", align 1
@.str.8 = private unnamed_addr constant [23 x i8] c"returned TRUE for \22.\22\0A\00", align 1
@.str.9 = private unnamed_addr constant [29 x i8] c"returned TRUE for \22cmd.exe\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_NeedCurrentDirectoryForExePathA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_NeedCurrentDirectoryForExePathA() #0 {
  %1 = call i32 @SetEnvironmentVariableA(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* null)
  %2 = call i32 @pNeedCurrentDirectoryForExePathA(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @ok(i32 %2, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @pNeedCurrentDirectoryForExePathA(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @ok(i32 %4, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @pNeedCurrentDirectoryForExePathA(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @ok(i32 %6, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @SetEnvironmentVariableA(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0))
  %9 = call i32 @pNeedCurrentDirectoryForExePathA(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @ok(i32 %12, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.8, i64 0, i64 0))
  %14 = call i32 @pNeedCurrentDirectoryForExePathA(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %15 = call i32 @ok(i32 %14, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %16 = call i32 @pNeedCurrentDirectoryForExePathA(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @ok(i32 %19, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.9, i64 0, i64 0))
  ret void
}

declare dso_local i32 @SetEnvironmentVariableA(i8*, i8*) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @pNeedCurrentDirectoryForExePathA(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
